# cpp-RestApi-Generator

./: .gitignore
modules/openapi-generator/src/main/java/org/openapitools/codegen/languages/: CppPocoAbstractCodegen.java  CppPocoClientCodegen.java
modules/openapi-generator/src/main/resources/cpp-poco-client/: CMakeLists.txt.mustache  HttpFileElement.cpp.mustache  HttpFileElement.h.mustache  HttpRequest.cpp.mustache  HttpRequest.h.mustache  Project.mustache  README.mustache  ServerConfiguration.mustache  ServerVariable.mustache  api-body.mustache  api-header.mustache  enum.mustache  helpers-body.mustache  helpers-header.mustache  model-body.mustache  model-header.mustache  object.mustache  todo.md
samples/client/petstore/cpp-poco-example/: CMakeLists.txt  build.bash
samples/client/petstore/cpp-poco-example/PetStore/: main.cpp
